<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword"
    android:background="@drawable/gradient_background"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:text="@string/reset_your_password"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="195dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/hive"
        android:layout_width="131dp"
        android:layout_height="145dp"
        android:layout_margin="40dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/baseline_hive_24"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_phone_24"
        android:hint="@string/enter_number"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="311dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/backButton1"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_margin="40dp"
        android:src="@drawable/baseline_arrow_back_ios_25"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>